--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,3 @@
-
----
-
-### ✅ `.gitignore`
-
-```gitignore
 # Bytecode Python
 __pycache__/
 *.pyc
@@ -23,8 +17,10 @@ venv/
 
 # File di output o risultati generati
 *.txt
-port_scan_result.txt
-dns_sniffer_log.txt
+!requirements.txt
+*.csv
+*.xls
+*.xlsx
 
 # Backup o file temporanei
 *~
